; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_skge.c_skge_mac_intr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_skge.c_skge_mac_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.skge_hw = type { i64 }

@CHIP_ID_GENESIS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.skge_hw*, i32)* @skge_mac_intr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @skge_mac_intr(%struct.skge_hw* %0, i32 %1) #0 {
  %3 = alloca %struct.skge_hw*, align 8
  %4 = alloca i32, align 4
  store %struct.skge_hw* %0, %struct.skge_hw** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.skge_hw*, %struct.skge_hw** %3, align 8
  %6 = getelementptr inbounds %struct.skge_hw, %struct.skge_hw* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @CHIP_ID_GENESIS, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load %struct.skge_hw*, %struct.skge_hw** %3, align 8
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @genesis_mac_intr(%struct.skge_hw* %11, i32 %12)
  br label %18

14:                                               ; preds = %2
  %15 = load %struct.skge_hw*, %struct.skge_hw** %3, align 8
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @yukon_mac_intr(%struct.skge_hw* %15, i32 %16)
  br label %18

18:                                               ; preds = %14, %10
  ret void
}

declare dso_local i32 @genesis_mac_intr(%struct.skge_hw*, i32) #1

declare dso_local i32 @yukon_mac_intr(%struct.skge_hw*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
